Update to Collections.emptyList